# LEapsQuantEngine

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  PROJECT.md  README.md  pyproject.toml  sample_swing_kor_pipeline.json  schema_draft.json
configs/: AGENTS.md
docs/: AGENTS.md  agent-artifact-runtime.md  agent-authored-sleeve-guide.md  architecture_v0.md  backtesting-guide.md  current-status.md  eod-snapshot-scheduler.md  kis-market-data-architecture.md  krx-live-readiness-checklist.md  krx-market-open-runbook.md  lean-core-hardening.md  market-data-manager-runbook.md  model-authoring-guide.md  news-data-manager-runbook.md  news-evidence-contract.md  reporting-guide.md  runtime-cadence-resolution.md  runtime-state.md  sleeve-strategy-profile.md
examples/: AGENTS.md
reference/: AGENTS.md
sleeves/: AGENTS.md
src/: AGENTS.md
tests/: AGENTS.md  test_account_sync.py  test_agent_daily_target.py  test_alpha_examples.py  test_alpha_runtime.py  test_backtesting.py  test_brokerage.py  test_cadence.py  test_cli.py  test_cli_indicators.py  test_cli_kis.py  test_cycle_journal.py  test_daily_performance.py  test_engine_guard.py  test_engine_skeleton.py  test_execution.py  test_execution_model_loader.py  test_finance_datareader_fundamentals.py  test_finance_datareader_market_data.py  test_fine_universe.py  test_framework_backtesting.py  test_framework_runner.py  test_fundamental_artifacts.py  test_fundamentals.py  test_indicator_benchmark.py  test_indicator_engine_runtime.py  test_indicator_load.py  test_indicator_snapshot.py  test_indicators.py  test_kis_adapter.py  (+57 more)
(+299 files in other folders)
