[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leaps-quant-engine"
version = "0.1.0"
description = "LEAN-style dynamic quant engine with sleeve-aware portfolio orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "uvicorn>=0.37.0",
]

[project.scripts]
leapsq = "leaps_quant_engine.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.5",
]
market-data = ["yfinance>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
